force-app/main/default/objects/Open_AI_Message__c/Open_AI_Message__c.object-meta.xml
<CustomObject>
    <label>Open AI Message</label>
    <nameField>
        <displayFormat>OAI-{0}</displayFormat>
        <label>Open AI Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Open AI Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>