force-app/main/default/objects/Open_AI_Message__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>