force-app/main/default/objects/Open_AI_Message__c/fields/recordid__c.field-meta.xml
<CustomField>
    <fullName>recordid__c</fullName>
    <label>recordid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>